Hack for weird bug that cut off a letter, but only if it was a 'p'

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ p {
   font-size: 2rem;
   position: relative;
   bottom: -0.04rem;
+  padding-right: 0.5rem;
 }
 
 .home-image {
